# open-bible-codes

./: .gitignore  LICENSE  Makefile  NOTICE.md  README.md  pyproject.toml
claims/: claim_catalog.csv
configs/: biblegateway_english_versions.csv  door43_english_controls.csv  ebible_english_controls.csv  example_ebible_engasv.toml  example_ebible_engdby.toml  example_ebible_engdra.toml  example_ebible_engerv.toml  example_ebible_enggnv.toml  example_ebible_enggw.toml  example_ebible_engkjv.toml  example_ebible_engkjv_apocrypha.toml  example_ebible_engnet.toml  example_ebible_engojb.toml  example_ebible_engweb.toml  example_ebible_engwycliffe.toml  example_ebible_engylt.toml  example_ebible_grclxx.toml  example_ebible_grcmt.toml  example_ebible_grctcgnt.toml  example_ebible_grctr.toml  example_ebible_hebwlc.toml  example_greek.toml  example_hebrew.toml  example_koren_genesis.toml  example_mam.toml  example_michigan_torah.toml  example_oshb_wlc.toml  example_sblgnt.toml  example_step_tahot.toml  example_study.toml  example_uhb.toml  example_uxlc.toml  local_ampc.toml  local_msg.toml  local_niv.toml  local_nlt.toml  local_tpt.toml  manuscript_alexandrinus.toml  manuscript_bezae.toml  manuscript_p45.toml  (+22 more)
data/: README.md
docs/: ADDITIONAL_SCREENING_COHORTS.md  ALL_CODES_COMPOUND_EXTENSION_CONFIRMATORY_CONTROLS.md  ALL_CODES_COMPOUND_EXTENSION_CONFIRMATORY_PREREGISTRATION.md  ALL_CODES_COMPOUND_EXTENSION_CONTROLS.md  ALL_CODES_FOLLOWUP_CONTEXT.md  ALL_CODES_FOLLOWUP_EXTENSIONS.md  ALL_CODES_FOLLOWUP_LETTER_PATHS.md  ALL_CODES_FOLLOWUP_REVIEW.md  APOCRYPHA_BRIDGE_CONTEXT.md  (+423 more)
(+1408 files in other folders)
