[project]
name = "open-bible-codes"
version = "0.1.0"
description = "Open Hebrew and Greek Bible Codes / ELS analysis toolkit"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]
dev = ["pytest>=7"]

[project.scripts]
edls = "els.cli:main"
open-bible-codes = "els.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
