[project]
name = "open-bible-codes"
version = "0.1.0"
description = "Open Hebrew and Greek Bible Codes / ELS analysis toolkit"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
analytics = ["duckdb>=1.0"]
test = ["pytest>=7", "pytest-xdist>=3", "pytest-cov>=5"]
dev = ["duckdb>=1.0", "pytest>=7", "pytest-xdist>=3", "pytest-cov>=5"]

[project.scripts]
edls = "els.cli:main"
open-bible-codes = "els.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: slower real-corpus smoke tests",
  "requires_corpus: needs local corpora in data/ or generated reports/",
]
